--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -6,12 +6,30 @@
     android:layout_height="match_parent"
     tools:context="com.example.finalproject.page.AddProduct"
     android:orientation="vertical">
+
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+    </android.support.design.widget.AppBarLayout>
     <RelativeLayout
         android:id="@+id/button_choose_image"
-        android:layout_margin="20dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
+
         android:background="@drawable/border_black"
         android:layout_width="match_parent"
-        android:layout_height="90dp">
+        android:layout_height="165dp">
         <TextView
             android:textColor="@color/colorBlack"
             android:layout_centerInParent="true"
@@ -45,28 +63,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <com.rengwuxian.materialedittext.MaterialEditText
-            android:id="@+id/Id"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Product Id"
-            app:met_floatingLabel="highlight"
-            android:inputType="text"
-            android:textColorHint="@android:color/white"
-            android:textSize="22sp"
-            app:met_floatingLabelTextSize="22sp"
-            android:layout_marginBottom="10dp"
-            />
 
         <com.rengwuxian.materialedittext.MaterialEditText
             android:id="@+id/nameProduct"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Product name"
+            android:hint="Nama Produk"
             app:met_floatingLabel="highlight"
             android:inputType="text"
             android:textColorHint="@android:color/white"
-            android:textSize="22sp"
+            android:textSize="18sp"
             app:met_floatingLabelTextSize="22sp"
             android:layout_marginBottom="10dp"
             />
@@ -77,26 +83,63 @@
             android:layout_height="wrap_content"
             android:hint="Harga"
             app:met_floatingLabel="highlight"
-            android:inputType="text"
+            android:inputType="number"
             android:textColorHint="@android:color/white"
-            android:textSize="22sp"
+            android:textSize="18sp"
             app:met_floatingLabelTextSize="22sp"
             android:layout_marginBottom="10dp"
             />
-
-
-        <com.rengwuxian.materialedittext.MaterialEditText
-            android:id="@+id/decription"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Description"
-            app:met_floatingLabel="highlight"
-            app:met_floatingLabelTextSize="22sp"
-            android:inputType="text"
-            android:textColorHint="@android:color/white"
+        <TextView
+            android:layout_marginBottom="15dp"
+            android:textColor="@color/colorBlack"
+            android:text="Stok Produk"
             android:textSize="22sp"
-            android:layout_marginBottom="20dp"
-            />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"></TextView>
+        <RelativeLayout
+            android:orientation="horizontal"
+            android:layout_width="240dp"
+            android:layout_height="wrap_content">
+            <RelativeLayout
+                android:id="@+id/plus_stock"
+                android:background="@drawable/fullblack"
+                android:layout_width="50dp"
+                android:layout_alignParentRight="true"
+                android:layout_height="50dp">
+
+                <TextView
+                    android:textColor="@color/colorWhite"
+                    android:textSize="35sp"
+                    android:layout_centerInParent="true"
+                    android:text="+"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+            </RelativeLayout>
+            <EditText
+                android:id="@+id/product_stock_edt"
+                android:textSize="22sp"
+                android:textAlignment="center"
+                android:layout_centerInParent="true"
+                android:background="@drawable/border_black"
+                android:inputType="number"
+                android:text="0"
+                android:layout_width="100dp"
+                android:layout_height="50dp"/>
+            <RelativeLayout
+                android:id="@+id/minus_stock"
+                android:background="@drawable/fullblack"
+                android:layout_width="50dp"
+                android:layout_alignParentLeft="true"
+                android:layout_height="50dp">
+                <ImageView
+                    android:background="@drawable/minus_icon"
+                    android:layout_centerInParent="true"
+                    android:textAlignment="center"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"/>
+            </RelativeLayout>
+        </RelativeLayout>
+
     </LinearLayout>
 
 <!--    <LinearLayout-->
