--- a/app/src/main/res/layout/activity_edit_product.xml
+++ b/app/src/main/res/layout/activity_edit_product.xml
@@ -6,12 +6,28 @@
     android:layout_height="match_parent"
     tools:context="com.example.finalproject.page.AddProduct"
     android:orientation="vertical">
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+    </android.support.design.widget.AppBarLayout>
     <RelativeLayout
         android:id="@+id/button_choose_image"
-        android:layout_margin="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginLeft="50dp"
         android:background="@drawable/border_black"
         android:layout_width="match_parent"
-        android:layout_height="90dp">
+        android:layout_height="165dp">
         <TextView
             android:textColor="@color/colorBlack"
             android:layout_centerInParent="true"
@@ -51,7 +67,7 @@
             android:id="@+id/productName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Product name"
+            android:hint="Nama Produk"
             android:inputType="text"
             app:met_textColorHint="@color/colorBlack"
             android:textColorHint="@android:color/white"
@@ -83,10 +99,10 @@
             android:layout_width="240dp"
             android:layout_height="wrap_content">
             <RelativeLayout
+                android:id="@+id/plus_stock"
                 android:background="@drawable/fullblack"
-                android:layout_marginRight="10dp"
                 android:layout_width="50dp"
-                android:layout_alignParentLeft="true"
+                android:layout_alignParentRight="true"
                 android:layout_height="50dp">
 
                 <TextView
@@ -98,7 +114,7 @@
                     android:layout_height="wrap_content"/>
             </RelativeLayout>
             <EditText
-                android:id="@+id/product_stock"
+                android:id="@+id/product_stock_edt"
                 android:textSize="22sp"
                 android:textAlignment="center"
                 android:layout_centerInParent="true"
@@ -108,9 +124,10 @@
                 android:layout_width="100dp"
                 android:layout_height="50dp"/>
             <RelativeLayout
+                android:id="@+id/minus_stock"
                 android:background="@drawable/fullblack"
                 android:layout_width="50dp"
-                android:layout_alignParentRight="true"
+                android:layout_alignParentLeft="true"
                 android:layout_height="50dp">
                 <ImageView
                     android:background="@drawable/minus_icon"
