--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,21 +14,11 @@
         android:layout_centerInParent="true">
 
         <ImageView
-            android:src="@drawable/logob"
+            android:src="@drawable/logo"
             android:layout_width="200dp"
             android:layout_height="200dp" />
 
-        <TextView
-            android:id="@+id/txtSlogan"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:textColor="@android:color/darker_gray"
-            android:fontFamily="serif-monospace"
-            android:gravity="center"
-            android:text="@string/app_name"
-            android:textSize="20sp"
-            android:textAllCaps="true"
-            android:textStyle="bold"/>
+
     </LinearLayout>
 
     <LinearLayout
@@ -38,29 +28,42 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <Button
-            android:id="@+id/btnSignUp"
-            android:textColor="@android:color/white"
+
+        <android.support.v7.widget.CardView
             android:layout_weight="1"
+            app:cardCornerRadius="6dp"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:shadowColor="@android:color/black"
+            android:layout_margin="15dp"
 
-            android:text="Sign up"
-            android:layout_margin="8dp"
-            />
+            android:layout_height="wrap_content">
+            <Button
+                android:background="@color/colorBlack"
+                android:id="@+id/btnSignUp"
+                android:textColor="@android:color/white"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:shadowColor="@android:color/black"
+                android:text="Sign up"
+                />
+        </android.support.v7.widget.CardView>
 
-
-        <Button
-            android:id="@+id/btnSignIn"
-            android:textColor="@android:color/white"
+        <android.support.v7.widget.CardView
             android:layout_weight="1"
+            app:cardCornerRadius="6dp"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:shadowColor="@android:color/black"
+            android:layout_margin="15dp"
+            android:layout_height="wrap_content">
+            <Button
+                android:background="@color/colorBlack"
+                android:id="@+id/btnSignIn"
+                android:textColor="@android:color/white"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:shadowColor="@android:color/black"
 
-            android:text="Sign in"
-            android:layout_margin="8dp"
-            />
+                android:text="Sign in"
+                />
+        </android.support.v7.widget.CardView>
+
     </LinearLayout>
 </RelativeLayout>
