--- a/app/src/main/res/layout/cart_layout.xml
+++ b/app/src/main/res/layout/cart_layout.xml
@@ -54,12 +54,12 @@
 
         </LinearLayout>
 
-        <ImageView
-            android:id="@+id/cart_item_count"
-            android:layout_width="40dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_horizontal|end"
-            android:layout_marginTop="16dp" />
+<!--        <ImageView-->
+<!--            android:id="@+id/cart_item_count"-->
+<!--            android:layout_width="40dp"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:layout_gravity="center_horizontal|end"-->
+<!--            android:layout_marginTop="16dp" />-->
 
 
     </LinearLayout>
