--- a/app/src/main/res/layout/activity_edit_product.xml
+++ b/app/src/main/res/layout/activity_edit_product.xml
@@ -164,25 +164,51 @@
 
 
 
-
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cardElevation="0dp"
+    <LinearLayout
         android:layout_margin="20dp"
-        app:cardCornerRadius="6dp">
-
-        <Button
-            android:background="@color/colorBlack"
-            android:id="@+id/submit_btn"
-            android:layout_width="match_parent"
+        android:weightSum="2"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <android.support.v7.widget.CardView
+            android:layout_weight="1"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:shadowColor="@android:color/black"
-            android:text="Tambah Produk"
-            android:textColor="@android:color/white"
-            />
+            app:cardElevation="0dp"
+            android:layout_marginRight="10dp"
+            app:cardCornerRadius="6dp">
 
-    </android.support.v7.widget.CardView>
+            <Button
+                android:background="@color/colorBlack"
+                android:id="@+id/submit_btn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:shadowColor="@android:color/black"
+                android:text="Tambah Produk"
+                android:textColor="@android:color/white"
+                />
+
+        </android.support.v7.widget.CardView>
+        <android.support.v7.widget.CardView
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:cardElevation="0dp"
+            app:cardCornerRadius="6dp">
+
+            <Button
+                android:background="@color/colorBlack"
+                android:id="@+id/delete_btn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:shadowColor="@android:color/black"
+                android:text="Hapus Produk"
+                android:textColor="@android:color/white"
+                />
+
+        </android.support.v7.widget.CardView>
+    </LinearLayout>
+
 
 
 <!--    <ProgressBar-->
