--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -29,18 +29,30 @@
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         app:cardBackgroundColor="@color/colorPrimary">
 
-        <RelativeLayout
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
+            android:layout_height="wrap_content">
+            <LinearLayout
+                android:layout_margin="10dp"
+                android:background="@drawable/border_black"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <Spinner
+                    android:id="@+id/order_option"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:padding="5dp" />
+            </LinearLayout>
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
 
@@ -72,10 +84,10 @@
                     android:id="@+id/btnClearCart"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_margin="8dp"
+                    android:layout_margin="10dp"
                     android:layout_weight="1"
                     android:shadowColor="@android:color/black"
-                    android:text="Clear Cart"
+                    android:text="hAPUS SEMUA"
                     android:textColor="@android:color/black"
                     />
 
@@ -84,16 +96,16 @@
                     android:id="@+id/btnPlaceOrder"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_margin="8dp"
+                    android:layout_margin="10dp"
                     android:layout_weight="1"
                     android:shadowColor="@android:color/black"
-                    android:text="Place Order"
-                    android:textColor="@android:color/white"
+                    android:text="ORDER"
+                    android:textColor="@android:color/black"
                      />
             </LinearLayout>
 
 
-        </RelativeLayout>
+        </LinearLayout>
 
     </android.support.v7.widget.CardView>
 
