--- a/app/src/main/res/layout/activity_create_qr.xml
+++ b/app/src/main/res/layout/activity_create_qr.xml
@@ -5,22 +5,34 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
-
-    <ImageView
-        android:src="@drawable/no_image"
-        android:id="@+id/idIVQrcode"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
+    <FrameLayout
+        android:id="@+id/parent_img"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
-        android:contentDescription="@string/qr_code" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <ImageView
+            android:src="@drawable/no_image"
+            android:id="@+id/idIVQrcode"
+            android:layout_width="300dp"
+            android:layout_height="300dp"
+            android:contentDescription="@string/qr_code" />
+        <TextView
+            android:textSize="24dp"
+            android:textStyle="bold"
+            android:layout_gravity="bottom|center"
+            android:id="@+id/prod_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+    </FrameLayout>
+
 
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardElevation="0dp"
-        android:layout_below="@+id/idIVQrcode"
+        android:layout_below="@+id/parent_img"
         android:layout_marginTop="40dp"
         android:layout_marginLeft="25dp"
         android:layout_marginRight="25dp"
