--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -31,11 +31,12 @@
             android:hint="Nomor Telepon"
             android:inputType="phone"
             android:textColorHint="@android:color/white"
-            android:textSize="30sp"
-            app:met_textColorHint="@color/colorBlack"
+            android:textSize="34sp"
             app:met_floatingLabel="highlight"
             app:met_maxCharacters="15"
-            app:met_singleLineEllipsis="true"/>
+            app:met_singleLineEllipsis="true"
+            app:met_textColorHint="@color/colorBlack" />
+
         <android.support.design.widget.TextInputLayout
             android:id="@+id/inputLayout"
             android:layout_width="match_parent"
@@ -49,17 +50,12 @@
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
                 android:textColorHint="@android:color/white"
-                android:textSize="30sp"
+                android:textSize="34sp"
                 app:met_floatingLabel="highlight"
                 app:met_maxCharacters="10"
                 app:met_singleLineEllipsis="true" />
         </android.support.design.widget.TextInputLayout>
-        <CheckBox
-            android:id="@+id/remember_me"
-            android:textSize="20sp"
-            android:text="Ingat saya"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+
     </LinearLayout>
 
 
@@ -76,7 +72,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:shadowColor="@android:color/black"
-            android:text="Masuk"
+            android:text="Ubah"
             />
     </android.support.v7.widget.CardView>
 </RelativeLayout>
