--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -20,7 +20,7 @@
 
 
         android:orientation="horizontal">
-        <android.support.v7.widget.CardView
+        <androidx.cardview.widget.CardView
             app:cardCornerRadius="80dp"
             android:layout_marginLeft="15dp"
 
@@ -32,7 +32,7 @@
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:src="@drawable/no_image" />
-        </android.support.v7.widget.CardView>
+        </androidx.cardview.widget.CardView>
 
 
         <LinearLayout
