--- a/app/src/main/res/layout/activity_create_qr.xml
+++ b/app/src/main/res/layout/activity_create_qr.xml
@@ -28,7 +28,7 @@
 
 
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardElevation="0dp"
@@ -48,6 +48,6 @@
             android:textColor="@android:color/white"
             />
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
 </RelativeLayout>
