--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
         android:layout_height="wrap_content">
 
 
-        <android.support.v7.widget.CardView
+        <androidx.cardview.widget.CardView
             android:layout_weight="1"
             app:cardCornerRadius="6dp"
             android:layout_width="0dp"
@@ -45,9 +45,9 @@
                 android:shadowColor="@android:color/black"
                 android:text="Sign up"
                 />
-        </android.support.v7.widget.CardView>
+        </androidx.cardview.widget.CardView>
 
-        <android.support.v7.widget.CardView
+        <androidx.cardview.widget.CardView
             android:layout_weight="1"
             app:cardCornerRadius="6dp"
             android:layout_width="0dp"
@@ -63,7 +63,7 @@
 
                 android:text="Sign in"
                 />
-        </android.support.v7.widget.CardView>
+        </androidx.cardview.widget.CardView>
 
     </LinearLayout>
 </RelativeLayout>
