--- a/app/src/main/res/layout/activity_recap_detail.xml
+++ b/app/src/main/res/layout/activity_recap_detail.xml
@@ -6,19 +6,17 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="com.example.finalproject.page.ProductList">
-    <android.support.design.widget.AppBarLayout
+    <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
-
-        <android.support.v7.widget.Toolbar
+        <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
-
-    </android.support.design.widget.AppBarLayout>
+    </com.google.android.material.appbar.AppBarLayout>
     <com.github.mikephil.charting.charts.LineChart
         android:id="@+id/lineChart"
         android:minHeight="170dp"
@@ -26,7 +24,7 @@
         android:layout_margin="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_weight="1"
 
         android:layout_width="match_parent"
