--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -5,17 +5,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.finalproject.page.SignIn">
-    <android.support.design.widget.AppBarLayout
+    <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
-        <android.support.v7.widget.Toolbar
+        <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
-    </android.support.design.widget.AppBarLayout>
+    </com.google.android.material.appbar.AppBarLayout>
     <LinearLayout
         android:orientation="vertical"
         android:layout_marginLeft="8dp"
@@ -36,7 +36,7 @@
             app:met_floatingLabel="highlight"
             app:met_maxCharacters="15"
             app:met_singleLineEllipsis="true"/>
-        <android.support.design.widget.TextInputLayout
+        <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/inputLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -53,7 +53,7 @@
                 app:met_floatingLabel="highlight"
                 app:met_maxCharacters="10"
                 app:met_singleLineEllipsis="true" />
-        </android.support.design.widget.TextInputLayout>
+        </com.google.android.material.textfield.TextInputLayout>
         <CheckBox
             android:id="@+id/remember_me"
             android:textSize="20sp"
@@ -63,7 +63,7 @@
     </LinearLayout>
 
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:layout_margin="8dp"
         app:cardCornerRadius="6dp"
         android:layout_alignParentBottom="true"
@@ -78,5 +78,5 @@
             android:shadowColor="@android:color/black"
             android:text="Masuk"
             />
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 </RelativeLayout>
