--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -10,19 +10,17 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <android.support.design.widget.AppBarLayout
+        <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:theme="@style/AppTheme.AppBarOverlay">
-
-            <android.support.v7.widget.Toolbar
+            <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:background="?attr/colorPrimary"
                 app:popupTheme="@style/AppTheme.PopupOverlay" />
-
-        </android.support.design.widget.AppBarLayout>
+        </com.google.android.material.appbar.AppBarLayout>
 
         <RelativeLayout
             android:id="@+id/button_choose_image"
@@ -41,7 +39,7 @@
                 android:text="Pilih Gambar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
-            <android.support.v7.widget.CardView
+            <androidx.cardview.widget.CardView
                 android:visibility="gone"
                 android:id="@+id/image_card"
                 android:layout_width="match_parent"
@@ -56,7 +54,7 @@
                     android:layout_height="match_parent"
                     android:scaleType="fitXY" />
 
-            </android.support.v7.widget.CardView>
+            </androidx.cardview.widget.CardView>
 
         </RelativeLayout>
         <LinearLayout
@@ -92,7 +90,7 @@
                 app:met_floatingLabel="highlight"
                 app:met_singleLineEllipsis="true" />
 
-            <android.support.design.widget.TextInputLayout
+            <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/inputLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -110,7 +108,7 @@
                     app:met_floatingLabel="none"
                     app:met_maxCharacters="16"
                     app:met_singleLineEllipsis="true" />
-            </android.support.design.widget.TextInputLayout>
+            </com.google.android.material.textfield.TextInputLayout>
 
             <com.rengwuxian.materialedittext.MaterialEditText
                 android:id="@+id/etAddress"
@@ -149,7 +147,7 @@
                     android:id="@+id/radioButton"
                     android:layout_width="wrap_content"
                     android:layout_height="55dp"
-                    android:checked="false"
+                    android:checked="true"
                     android:text="Laki-laki"
                     android:textSize="16dp" />
 
@@ -166,7 +164,7 @@
         </LinearLayout>
 
 
-        <android.support.v7.widget.CardView
+        <androidx.cardview.widget.CardView
             app:cardCornerRadius="6dp"
             android:layout_width="match_parent"
             android:layout_marginTop="15dp"
@@ -183,6 +181,6 @@
                 android:shadowColor="@android:color/black"
                 android:text="Daftar Akun"
                 />
-        </android.support.v7.widget.CardView>
+        </androidx.cardview.widget.CardView>
     </LinearLayout>
 </ScrollView>
