--- a/app/src/main/res/layout/dialog_scan_result.xml
+++ b/app/src/main/res/layout/dialog_scan_result.xml
@@ -98,7 +98,7 @@
         android:layout_marginTop="20dp"
         android:orientation="horizontal">
 
-        <android.support.v7.widget.CardView
+        <androidx.cardview.widget.CardView
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -116,8 +116,8 @@
                 android:textColor="@android:color/white"
                 />
 
-        </android.support.v7.widget.CardView>
-        <android.support.v7.widget.CardView
+        </androidx.cardview.widget.CardView>
+        <androidx.cardview.widget.CardView
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -134,7 +134,7 @@
                 android:textColor="@android:color/white"
                 />
 
-        </android.support.v7.widget.CardView>
+        </androidx.cardview.widget.CardView>
 
     </LinearLayout>
 </LinearLayout>
