--- a/app/src/main/res/layout/activity_recap_option.xml
+++ b/app/src/main/res/layout/activity_recap_option.xml
@@ -165,12 +165,31 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <LinearLayout
+            android:layout_marginBottom="20dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/border_black"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <Spinner
                 android:id="@+id/recap_option"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:padding="5dp" />
+        </LinearLayout>
+
+
+        <TextView
+            android:textColor="@color/colorBlack"
+            android:text="Tipe Penjualan:"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <LinearLayout
+            android:layout_marginTop="10dp"
+            android:background="@drawable/border_black"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <Spinner
+                android:id="@+id/sell_type_option"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:padding="5dp" />
