--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -75,7 +75,7 @@
                     android:layout_centerInParent="true"
                     android:textSize="20sp"
                     android:textColor="@color/colorBlack"
-                    android:text="Belanja"
+                    android:text="Keranjang"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
             </RelativeLayout>
