--- a/app/src/main/res/layout/dialog_add_sub_varian.xml
+++ b/app/src/main/res/layout/dialog_add_sub_varian.xml
@@ -44,7 +44,7 @@
         android:layout_marginTop="20dp"
         android:orientation="horizontal">
 
-        <android.support.v7.widget.CardView
+        <androidx.cardview.widget.CardView
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -62,8 +62,8 @@
                 android:textColor="@android:color/white"
                 />
 
-        </android.support.v7.widget.CardView>
-        <android.support.v7.widget.CardView
+        </androidx.cardview.widget.CardView>
+        <androidx.cardview.widget.CardView
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -80,7 +80,7 @@
                 android:textColor="@android:color/white"
                 />
 
-        </android.support.v7.widget.CardView>
+        </androidx.cardview.widget.CardView>
 
     </LinearLayout>
 </LinearLayout>
