--- a/app/src/main/res/layout/filter_popup.xml
+++ b/app/src/main/res/layout/filter_popup.xml
@@ -102,7 +102,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
             </LinearLayout>
-            <android.support.v7.widget.CardView
+            <androidx.cardview.widget.CardView
                 android:layout_weight="2"
                 android:layout_width="0dp"
                 android:layout_gravity="center"
@@ -122,7 +122,7 @@
                     android:textColor="@android:color/white"
                     />
 
-            </android.support.v7.widget.CardView>
+            </androidx.cardview.widget.CardView>
         </LinearLayout>
 
         <LinearLayout
@@ -147,7 +147,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
             </LinearLayout>
-            <android.support.v7.widget.CardView
+            <androidx.cardview.widget.CardView
                 android:layout_weight="2"
                 android:layout_width="0dp"
                 android:layout_gravity="center"
@@ -167,9 +167,9 @@
                     android:textColor="@android:color/white"
                     />
 
-            </android.support.v7.widget.CardView>
+            </androidx.cardview.widget.CardView>
         </LinearLayout>
-        <android.support.v7.widget.CardView
+        <androidx.cardview.widget.CardView
             android:layout_marginBottom="40dp"
             android:layout_width="match_parent"
             android:layout_gravity="center"
@@ -189,7 +189,7 @@
                 android:textColor="@android:color/white"
                 />
 
-        </android.support.v7.widget.CardView>
+        </androidx.cardview.widget.CardView>
     </LinearLayout>
 
 </LinearLayout>
