--- a/app/src/main/res/layout/order_item_layout.xml
+++ b/app/src/main/res/layout/order_item_layout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
+<androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -73,7 +73,7 @@
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
-                <android.support.v7.widget.CardView
+                <androidx.cardview.widget.CardView
                     android:id="@+id/image_card"
                     android:layout_marginRight="10dp"
                     android:layout_width="50dp"
@@ -87,7 +87,7 @@
                         android:layout_height="match_parent"
                         android:scaleType="fitXY" />
 
-                </android.support.v7.widget.CardView>
+                </androidx.cardview.widget.CardView>
                 <LinearLayout
                     android:orientation="vertical"
                     android:layout_weight="1"
@@ -142,4 +142,4 @@
 
     </LinearLayout>
 
-</android.support.v7.widget.CardView>
+</androidx.cardview.widget.CardView>
