--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -91,6 +91,7 @@
             android:layout_marginBottom="10dp"
             />
         <TextView
+            android:visibility="gone"
             android:layout_marginBottom="15dp"
             android:textColor="@color/colorBlack"
             android:text="Stok Produk"
@@ -98,6 +99,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"></TextView>
         <RelativeLayout
+            android:visibility="gone"
             android:orientation="horizontal"
             android:layout_width="240dp"
             android:layout_height="wrap_content">
@@ -132,12 +134,13 @@
                 android:layout_width="50dp"
                 android:layout_alignParentLeft="true"
                 android:layout_height="50dp">
+
                 <ImageView
-                    android:background="@drawable/minus_icon"
-                    android:layout_centerInParent="true"
-                    android:textAlignment="center"
                     android:layout_width="20dp"
-                    android:layout_height="20dp"/>
+                    android:layout_height="20dp"
+                    android:layout_centerInParent="true"
+                    android:background="@drawable/minus_icon"
+                    android:textAlignment="center" />
             </RelativeLayout>
         </RelativeLayout>
 
