--- a/app/src/main/res/layout/activity_edit_product.xml
+++ b/app/src/main/res/layout/activity_edit_product.xml
@@ -86,6 +86,7 @@
             />
 
         <TextView
+            android:visibility="gone"
             android:layout_marginBottom="15dp"
             android:textColor="@color/colorBlack"
             android:text="Stok Produk"
@@ -93,6 +94,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"></TextView>
         <RelativeLayout
+            android:visibility="gone"
             android:orientation="horizontal"
             android:layout_width="240dp"
             android:layout_height="wrap_content">
