--- a/app/src/main/res/layout/activity_edit_product.xml
+++ b/app/src/main/res/layout/activity_edit_product.xml
@@ -17,197 +17,234 @@
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
     </com.google.android.material.appbar.AppBarLayout>
-    <RelativeLayout
-        android:id="@+id/button_choose_image"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
-        android:layout_marginRight="50dp"
-        android:layout_marginLeft="50dp"
-        android:background="@drawable/border_black"
+    <ScrollView
+        android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="165dp">
-        <TextView
-            android:textColor="@color/colorBlack"
-            android:layout_centerInParent="true"
-            android:textSize="35dp"
-            android:text="Pilih Gambar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        <androidx.cardview.widget.CardView
-            android:visibility="gone"
-            android:id="@+id/image_card"
+        android:layout_height="0dp">
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:cardElevation="0dp"
-            android:layout_margin="2dp"
-            app:cardCornerRadius="6dp">
-
-            <ImageView
-                android:layout_marginBottom="20dp"
-                android:id="@+id/image_product"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="fitXY" />
-
-        </androidx.cardview.widget.CardView>
-
-    </RelativeLayout>
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_centerInParent="true"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-
-        <com.rengwuxian.materialedittext.MaterialEditText
-            android:id="@+id/productName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Nama Produk"
-            android:inputType="text"
-            app:met_textColorHint="@color/colorBlack"
-            android:textColorHint="@android:color/white"
-            android:textSize="22sp"
-            android:layout_marginBottom="10dp"
-            />
-
-        <com.rengwuxian.materialedittext.MaterialEditText
-            android:id="@+id/productPrice"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Harga"
-            app:met_textColorHint="@color/colorBlack"
-            android:inputType="number"
-            android:textColorHint="@android:color/white"
-            android:textSize="22sp"
-            android:layout_marginBottom="10dp"
-            />
-
-        <TextView
-            android:visibility="gone"
-            android:layout_marginBottom="15dp"
-            android:textColor="@color/colorBlack"
-            android:text="Stok Produk"
-            android:textSize="22sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"></TextView>
-        <RelativeLayout
-            android:visibility="gone"
-            android:orientation="horizontal"
-            android:layout_width="240dp"
             android:layout_height="wrap_content">
             <RelativeLayout
-                android:id="@+id/plus_stock"
-                android:background="@drawable/fullblack"
-                android:layout_width="50dp"
-                android:layout_alignParentRight="true"
-                android:layout_height="50dp">
-
+                android:id="@+id/button_choose_image"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                android:layout_marginRight="50dp"
+                android:layout_marginLeft="50dp"
+                android:background="@drawable/border_black"
+                android:layout_width="match_parent"
+                android:layout_height="165dp">
                 <TextView
-                    android:textColor="@color/colorWhite"
-                    android:textSize="35sp"
+                    android:textColor="@color/colorBlack"
                     android:layout_centerInParent="true"
-                    android:text="+"
+                    android:textSize="35dp"
+                    android:text="Pilih Gambar"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
+                <androidx.cardview.widget.CardView
+                    android:visibility="gone"
+                    android:id="@+id/image_card"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:cardElevation="0dp"
+                    android:layout_margin="2dp"
+                    app:cardCornerRadius="6dp">
+
+                    <ImageView
+                        android:layout_marginBottom="20dp"
+                        android:id="@+id/image_product"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:scaleType="fitXY" />
+
+                </androidx.cardview.widget.CardView>
+
             </RelativeLayout>
-            <EditText
-                android:id="@+id/product_stock_edt"
-                android:textSize="22sp"
-                android:textAlignment="center"
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:layout_centerInParent="true"
-                android:background="@drawable/border_black"
-                android:inputType="number"
-                android:text="0"
-                android:layout_width="100dp"
-                android:layout_height="50dp"/>
-            <RelativeLayout
-                android:id="@+id/minus_stock"
-                android:background="@drawable/fullblack"
-                android:layout_width="50dp"
-                android:layout_alignParentLeft="true"
-                android:layout_height="50dp">
-                <ImageView
-                    android:background="@drawable/minus_icon"
-                    android:layout_centerInParent="true"
-                    android:textAlignment="center"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"/>
-            </RelativeLayout>
-        </RelativeLayout>
-
-    </LinearLayout>
-
-<!--    <LinearLayout-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:orientation="horizontal">-->
-
-<!--        <Button-->
-<!--            android:id="@+id/button_choose_image"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_weight="1"-->
-<!--            android:text="Choose file" />-->
-
-<!--        <TextView-->
-<!--            android:id="@+id/uploadText"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_weight="1"-->
-<!--            android:text="Pilih Foto Produk"-->
-<!--            android:textSize="20dp" />-->
-
-<!--    </LinearLayout>-->
-
-
-
-    <LinearLayout
-        android:layout_margin="20dp"
-        android:weightSum="2"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <androidx.cardview.widget.CardView
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:cardElevation="0dp"
-            android:layout_marginRight="10dp"
-            app:cardCornerRadius="6dp">
-
-            <Button
-                android:background="@color/colorBlack"
-                android:id="@+id/submit_btn"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:shadowColor="@android:color/black"
-                android:text="Tambah Produk"
-                android:textColor="@android:color/white"
-                />
+                android:layout_height="wrap_content">
 
-        </androidx.cardview.widget.CardView>
-        <androidx.cardview.widget.CardView
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:cardElevation="0dp"
-            app:cardCornerRadius="6dp">
 
-            <Button
-                android:background="@color/colorBlack"
-                android:id="@+id/delete_btn"
+                <EditText
+                    android:id="@+id/productName"
+                    android:layout_width="match_parent"
+                    android:layout_height="55dp"
+                    android:hint="Nama Produk"
+                    app:met_floatingLabel="highlight"
+                    android:inputType="text"
+                    android:paddingHorizontal="10dp"
+                    android:background="@drawable/border_black"
+                    android:textColorHint="@android:color/darker_gray"
+                    android:textSize="18sp"
+                    app:met_floatingLabelTextSize="22sp"
+                    android:layout_marginBottom="10dp"
+                    />
+
+                <EditText
+                    android:id="@+id/productPrice"
+                    android:layout_width="match_parent"
+                    android:layout_height="55dp"
+                    android:hint="Harga"
+                    app:met_floatingLabel="highlight"
+                    android:inputType="number"
+                    android:textSize="18sp"
+                    android:layout_marginTop="8dp"
+                    android:paddingHorizontal="10dp"
+                    android:background="@drawable/border_black"
+                    android:textColorHint="@android:color/darker_gray"
+                    app:met_floatingLabelTextSize="22sp"
+                    android:layout_marginBottom="10dp"
+                    />
+
+                <EditText
+                    android:id="@+id/desc"
+                    android:layout_width="match_parent"
+                    android:layout_height="180dp"
+                    android:hint="Deskripsi"
+                    app:met_floatingLabel="highlight"
+                    android:textSize="18sp"
+                    android:layout_marginTop="8dp"
+                    android:paddingVertical="10dp"
+                    android:paddingHorizontal="10dp"
+                    android:inputType="text|textMultiLine"
+                    android:gravity="top"
+                    android:background="@drawable/border_black"
+                    android:textColorHint="@android:color/darker_gray"
+                    app:met_floatingLabelTextSize="22sp"
+                    android:layout_marginBottom="10dp"/>
+
+                <TextView
+                    android:layout_marginTop="8dp"
+                    android:visibility="visible"
+                    android:layout_marginBottom="15dp"
+                    android:textColor="@color/colorBlack"
+                    android:text="Waktu PO Dalam Hari"
+                    android:textSize="18sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"></TextView>
+                <RelativeLayout
+                    android:visibility="visible"
+                    android:orientation="horizontal"
+                    android:layout_width="240dp"
+                    android:layout_height="wrap_content">
+                    <RelativeLayout
+                        android:id="@+id/plus_stock"
+                        android:background="@drawable/fullblack"
+                        android:layout_width="50dp"
+                        android:layout_alignParentRight="true"
+                        android:layout_height="50dp">
+
+                        <TextView
+                            android:textColor="@color/colorWhite"
+                            android:textSize="35sp"
+                            android:layout_centerInParent="true"
+                            android:text="+"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+                    </RelativeLayout>
+
+                    <EditText
+                        android:id="@+id/poTime"
+                        android:layout_width="100dp"
+                        android:layout_height="50dp"
+                        android:layout_centerInParent="true"
+                        android:background="@drawable/border_black"
+                        android:inputType="number"
+                        android:text="0"
+                        android:textAlignment="center"
+                        android:textSize="22sp" />
+                    <RelativeLayout
+                        android:id="@+id/minus_stock"
+                        android:background="@drawable/fullblack"
+                        android:layout_width="50dp"
+                        android:layout_alignParentLeft="true"
+                        android:layout_height="50dp">
+
+                        <ImageView
+                            android:layout_width="20dp"
+                            android:layout_height="20dp"
+                            android:layout_centerInParent="true"
+                            android:background="@drawable/minus_icon"
+                            android:textAlignment="center" />
+                    </RelativeLayout>
+                </RelativeLayout>
+
+            </LinearLayout>
+
+            <!--    <LinearLayout-->
+            <!--        android:layout_width="match_parent"-->
+            <!--        android:layout_height="wrap_content"-->
+            <!--        android:orientation="horizontal">-->
+
+            <!--        <Button-->
+            <!--            android:id="@+id/button_choose_image"-->
+            <!--            android:layout_width="wrap_content"-->
+            <!--            android:layout_height="wrap_content"-->
+            <!--            android:layout_weight="1"-->
+            <!--            android:text="Choose file" />-->
+
+            <!--        <TextView-->
+            <!--            android:id="@+id/uploadText"-->
+            <!--            android:layout_width="wrap_content"-->
+            <!--            android:layout_height="wrap_content"-->
+            <!--            android:layout_weight="1"-->
+            <!--            android:text="Pilih Foto Produk"-->
+            <!--            android:textSize="20dp" />-->
+
+            <!--    </LinearLayout>-->
+
+
+
+            <LinearLayout
+                android:layout_margin="20dp"
+                android:weightSum="2"
+                android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:shadowColor="@android:color/black"
-                android:text="Hapus Produk"
-                android:textColor="@android:color/white"
-                />
+                android:layout_height="wrap_content">
+                <androidx.cardview.widget.CardView
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    app:cardElevation="0dp"
+                    android:layout_marginRight="10dp"
+                    app:cardCornerRadius="6dp">
 
-        </androidx.cardview.widget.CardView>
-    </LinearLayout>
+                    <Button
+                        android:background="@color/colorBlack"
+                        android:id="@+id/submit_btn"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:shadowColor="@android:color/black"
+                        android:text="Ubah Produk"
+                        android:textColor="@android:color/white"
+                        />
+
+                </androidx.cardview.widget.CardView>
+                <androidx.cardview.widget.CardView
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    app:cardElevation="0dp"
+                    app:cardCornerRadius="6dp">
+
+                    <Button
+                        android:background="@color/colorBlack"
+                        android:id="@+id/delete_btn"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:shadowColor="@android:color/black"
+                        android:text="Hapus Produk"
+                        android:textColor="@android:color/white"
+                        />
+
+                </androidx.cardview.widget.CardView>
+            </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
 
 
 
