--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -28,4 +28,6 @@
     <color name="defaultColorDark">#c6c6c6</color>
     <color name="pumpkin_orange">#fdcfa6</color>
     <color name="white_transparent">#B3ffffff</color>
+    <color name="black">#000000</color>
+
 </resources>
